# textualize-mcp

./: .gitignore  DEVELOPMENT.md  README.md  cli.py  enhanced_calculator.py.removed  enhanced_calculator.tcss.removed  example_mcp_config.json  pyproject.toml  server.py  test_setup.py
textualize_mcp/: __init__.py
textualize_mcp/apps/: __init__.py  api_tester.py  api_tester.tcss  calculator.py  calculator.tcss  file_browser.py  file_browser.tcss  process_monitor.py  process_monitor.tcss
textualize_mcp/core/: __init__.py  base.py
textualize_mcp/server/: __init__.py  mcp_server.py
